objects/Default_Renewal_Oppty_Fields__mdt.object
<CustomObject>
    <description>Custom metadata to default fields on renewal opportunities</description>
    <fields>
        <fullName>Add_Year__c</fullName>
        <description>field to store number of years to be added to end date</description>
        <label>Add Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <description>Entity type of opportunity getting renewed</description>
        <label>Entity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_State__c</fullName>
        <description>State for renewal opportunities</description>
        <label>Renewal State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Default Renewal Oppty Fields</label>
    <pluralLabel>Default Renewal Oppty Fields</pluralLabel>
</CustomObject>